v0.14-dev

+ Update dependencies and README instructions.
+ Add new “i” key to list an abbreviated inventory summary. You still need to
  use specific keys for quaffing, throwing or evoking, but you can now monitor
  all of them with a single glance (feature suggested by a player).
+ Fix some remaining messages about “magical stairs” insetad of “magical
  monolith”.
+ Backport some more UI improvements from Harmonist (like reset config if
  outdated).

-----------------------------------------------------------------------------
v0.13 2019-11-19

+ Some improvements for the browser version based on Harmonist code.
+ Fix rare crash in Tk version at startup.
+ use simpler math/rand, because we don't need crypto secure random numbers,
  and this works faster, specially on some platforms.
+ Fix unintuitive interaction between dancing rapier and tiny harpies blinking.
+ New tile for doors, backported from Harmonist.
+ New tile for “magical stairs”, now more like a “real” monolith, backported
  from Harmonist.
+ Update wasm version to latest API.
+ Do not print rod of lightning message when no targets.
+ You can now use arrow keys in menus too. Backported from Harmonist.
+ Fix interaction between har-kar gauntlets and tiny harpies in a pathological
  case.
+ Improvements in character dump. Mainly ideas from Harmonist.
+ Allow (x) to close/continue as well as an alternative to space and esc, and
  hint to that first.  Backported from Harmonist. More portable for browsers.

-----------------------------------------------------------------------------
v0.12.0 2018-12-19

Bugfix and minor improvements release:

+ Winged monsters produce wing flapping noise instead of footsteps noise, and
  there's a distinction between heavy and normal footsteps. This way you still
  cannot be sure what kind of monster it is, but you can have an idea.
+ Add a message when a monster falls asleep because of rod of sleeping or night
  magara.